src/style.css
@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap");

:root {
  --font-family-default: "Open Sans", sans-serif;
  --font-family-secondary: "Raleway", sans-serif;

  --font-size-100: 0.5rem;
  --font-size-200: 0.625rem;
  --font-size-300: 0.75rem;
  --font-size-400: 0.875rem;
  --font-size-500: 1rem;
  --font-size-600: 1.125rem;
  --font-size-700: 1.25rem;
  --font-size-800: 1.5rem;
  --font-size-900: 2rem;
  --font-size-1000: 2.5rem;

  --font-weight-normal: 400;
  --font-weight-bold: 700;

  --border-round-sm: 0.25rem;
  --border-round-md: 0.5rem;
  --border-pill: 999rem;

  --color-blue-100: hsl(219, 30%, 18%);
  --color-blue-200: hsl(217, 27%, 15%);
  --color-blue-300: hsl(217, 27%, 13%);
  --color-blue-400: hsl(215, 52%, 9%);
  --color-error: hsl(0, 100%, 63%);
  --color-accent-01: hsl(198, 60%, 50%);
  --color-accent-02: hsl(176, 68%, 64%);
  --color-button-hovered: hsl(186, 61%, 72%);
  --color-neutral-100: hsl(0, 0%, 100%);
  --color-neutral-200: hsl(243, 87%, 12%);
}

* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}

body {
  font-family: var(--font-family-default);
  font-size: var(--font-size-400);
  line-height: 1.5;
  color: var(--color-neutral-100);
  background-color: var(--color-blue-300);
}

a {
  text-decoration: none;
  color: inherit;
}

ul,
ol {
  list-style-type: none;
}

input,
button,
textarea,
select {
  font: inherit;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: var(--font-family-secondary);
}

.button {
  display: block;
  padding-block: 1rem;
  width: clamp(15rem, 10.833rem + 10.417vw, 17.5rem);
  font-weight: var(--font-weight-bold);
  text-align: center;
  line-height: 1rem;
  background: linear-gradient(
    to bottom right,
    var(--color-accent-02),
    var(--color-accent-01)
  );
  border-radius: var(--border-pill);
}

.button:hover {
  background: var(--color-button-hovered);
}

.header {
  padding: 1.5rem 1.25rem;
}

.header__nav,
.header__list {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.header__logo {
  display: inline-block;
  min-height: 24px;
  min-width: 80px;
  background-image: url("./images/logo.svg");
  background-repeat: no-repeat;
  background-position: center center;
  background-size: contain;
}

.header__list {
  column-gap: 1.5rem;
  padding-right: 0.25rem;
}

.header__link {
  display: block;
  font-size: var(--font-size-300);
  line-height: 1.1667;
}

.header__link:hover {
  font-weight: var(--font-weight-bold);
  text-decoration: underline;
}

@media only screen and (min-width: 1024px) {
  .header {
    margin-top: 3.125rem;
    padding-inline: 5rem;
  }

  .header__logo {
    min-height: 52px;
    min-width: 176px;
  }

  .header__list {
    column-gap: 3.625rem;
    padding-right: 0;
  }

  .header__link {
    font-size: var(--font-size-500);
    line-height: 1.1875;
  }
}

.viewport {
  margin-top: 1.5rem;
}

.hero {
  padding-inline: 1.75rem;
}

.hero__container {
  margin-inline: auto;
  max-width: 45.875rem;
  width: 100%;
}

.hero .content-container,
.hero .image-container {
  margin-bottom: 2rem;
}

.hero .image-container,
.feature-panel .image-container {
  padding-inline: 0.5rem;
}

.hero .image-container img,
.feature-panel .image-container img {
  max-width: 100%;
}

.hero .text-container {
  text-align: center;
}

.hero .text-container h1 {
  margin-bottom: 1rem;
  font-size: var(--font-size-800);
}

.hero .text-container p {
  padding-inline: 0.75rem;
}

.hero .button {
  margin-inline: auto;
}

@media only screen and (min-width: 1024px) {
  .hero .image-container {
    margin-bottom: 2.25rem;
  }

  .hero .text-container h1 {
    margin-bottom: 2rem;
    font-size: var(--font-size-1000);
  }

  .hero .text-container p {
    padding-inline: 4.5rem;
    font-size: var(--font-size-700);
  }

  .hero .button {
    padding-block: 1.125rem;
    font-size: var(--font-size-500);
    line-height: 1.25;
  }
}

.feature {
  margin-top: 7.5rem;
  padding-inline: 1.75rem;
}

.feature .feature__container {
  margin-inline: auto;
  max-width: 55rem;
}

.feature .feature__list {
  display: grid;
  gap: 5rem;
}

.feature .feature__item {
  text-align: center;
}

.feature .feature__item .image-container {
  margin-bottom: 1.5rem;
}

.feature .content-container h2 {
  margin-bottom: 0.5rem;
  font-size: var(--font-size-600);
}

@media only screen and (min-width: 640px) {
  .feature {
    margin-top: 9.875rem;
  }

  .feature .feature__list {
    grid-template-columns: repeat(2, 1fr);
    gap: 4.875rem 9.625rem;
  }

  .feature .content-container h2 {
    font-size: var(--font-size-700);
    line-height: 1.5rem;
  }
}

.feature-panel {
  margin-block: 10rem;
  padding-inline: 1.75rem;
}

.feature-panel .feature-panel__container {
  max-width: 77.5rem;
  margin-inline: auto;
}

.feature-panel .image-container {
  margin-bottom: 3rem;
}

.feature-panel .text-container h2,
.feature-panel .text-container .paragraph {
  margin-bottom: 1rem;
}

.feature-panel .text-container h2 {
  font-size: var(--font-size-600);
}

.feature-panel .text-container .paragraph {
  display: grid;
  row-gap: 1rem;
}

.feature-panel .call-to-action {
  --color-scheme: var(--color-accent-02);
  display: flex;
  align-items: flex-end;
  column-gap: calc(0.25rem - 1px);
  padding-bottom: 0.375rem;
  max-width: fit-content;
  color: var(--color-scheme);
  border-bottom: 1px solid var(--color-scheme);
}

.feature-panel .call-to-action:hover {
  --hovered-state: var(--color-neutral-100);
  color: var(--hovered-state);
  border-color: var(--hovered-state);
}

.feature-panel .call-to-action svg {
  margin-bottom: 1px;
}

.feature-panel .call-to-action:hover use {
  fill: var(--hovered-state);
}

@media only screen and (min-width: 640px) {
  .feature-panel {
    margin-block: 8.625rem 7.5rem;
  }

  .feature-panel .image-container {
    text-align: center;
  }

  .feature-panel .text-container h2 {
    margin-bottom: calc(1.125rem + 1px);
    font-size: var(--font-size-1000);
    line-height: 1.25;
  }

  .feature-panel .text-container .paragraph {
    margin-bottom: 1.5rem;
  }

  .feature-panel .text-container .paragraph,
  .feature-panel .text-container .call-to-action {
    font-size: var(--font-size-500);
  }

  .feature-panel .text-container .call-to-action {
    column-gap: 0.5rem;
    line-height: 1.375rem;
  }

  .feature-panel .call-to-action svg {
    margin-bottom: calc(0.25rem - 1px);
  }
}

@media only screen and (min-width: 1024px) {
  .feature-panel .feature-panel__container {
    padding-left: calc(0.375rem - 1px);
  }

  .feature-panel .content-container {
    display: flex;
    align-items: flex-end;
    gap: 3rem 3.5rem;
  }

  .feature-panel .image-container {
    flex-shrink: 1;
    padding: 0;
    margin: 0;
    width: 38.4375rem;
    max-width: fit-content;
  }

  .feature-panel .text-container {
    flex: 1;
    padding-bottom: 4.25rem;
    min-width: 22.5rem;
    max-width: fit-content;
  }
}

.testimonials {
  margin: 10rem auto;
  padding-top: calc(1rem - 1px);
  padding-inline: 3rem;
  max-width: 78.5rem;
  gap: 1.5rem;
}

@media only screen and (min-width: 640px) {
  .testimonials {
    columns: 2;
  }
}

.quote {
  padding: 1.5rem 1.25rem 1.375rem;
  background-color: var(--color-blue-100);
  border-radius: 0.25rem;
  break-inside: avoid-column;
}

.quote:not(:first-child) {
  margin-block: 1.5rem;
}

@media only screen and (min-width: 1024px) {
  .testimonials {
    columns: 3;
    gap: 2.5rem;
    margin-block: 7.5rem 12.5rem;
    padding-top: 3.75rem;
  }

  .quote {
    width: 100%;
  }

  .quote:not(:first-child) {
    margin-block: 0;
  }
}

.quote h2 {
  font-size: var(--font-size-200);
  font-weight: var(--font-weight-normal);
  line-height: 1.8;
}

.quote .author {
  display: flex;
  align-items: flex-start;
  gap: 0.5rem;
  margin-top: 1rem;
}

.author .author__image {
  --dim: 1.5rem;
  display: block;
  width: var(--dim);
  height: var(--dim);
  border-radius: 50%;
}

.author .author__credentials cite {
  display: block;
  margin-bottom: 0.25rem;
  font-size: var(--font-size-200);
  font-style: normal;
  font-weight: var(--font-weight-bold);
  line-height: 1.2;
}

.author .author__credentials p {
  font-size: var(--font-size-100);
  line-height: 1.25;
}

@media only screen and (min-width: 640px) {
  .quote {
    padding: 1.625rem;
    padding-top: 2.5rem;
    padding-right: calc(1.5rem + 1px);
  }

  .quote h2 {
    font-size: var(--font-size-400);
    line-height: 1.5;
  }

  .quote .author {
    margin-top: 1.5rem;
  }
}

.footer {
  padding: 16.25rem 1.75rem 3.25rem;
  background-color: var(--color-blue-400);
}

.footer .footer__logo {
  padding-inline: 1.125rem;
  margin-bottom: calc(2.25rem - 1px);
}

.footer .footer__logo img {
  width: 6.75rem;
}

.footer .footer-contact-container a:not(:first-child) {
  margin-top: 1rem;
}

.footer .footer-contact-container a {
  display: flex;
  align-items: flex-start;
  gap: 1rem;
}

.footer .footer-contact-container a .text-container {
  flex: 1;
}

.footer .footer-contact-container a .contact-link-icon {
  --dim: 1.5rem;
  display: inline-block;
  width: var(--dim);
  height: var(--dim);
}

.footer .footer-links-container {
  display: grid;
  gap: 3rem;
  margin-block: 3.5rem;
}

.footer .footer-links-container .footer__list {
  display: flex;
  flex-direction: column;
  gap: 1rem;
}

.footer .footer-links-container .footer__links {
  font-size: var(--font-size-500);
  line-height: 1.375rem;
}

.footer .footer-links-container .footer__links:hover {
  font-weight: var(--font-weight-bold);
}

.footer .footer-social-container {
  display: flex;
  gap: 0.625rem;
  width: 6.375rem;
  margin-inline: auto;
}

.footer .footer-social-container a {
  --dim: 1.75rem;
  display: flex;
  align-items: center;
  justify-content: center;
  flex: 1;
  width: var(--dim);
  height: var(--dim);
  border: 1px solid var(--color-neutral-100);
  border-radius: 50%;
}

.footer .footer-social-container a svg {
  display: block;
  width: 50%;
  height: 50%;
  fill: var(--color-neutral-100);
}

.footer .footer-social-container a:hover {
  --hovered-state: var(--color-accent-02);
  border-color: var(--hovered-state);
}

.footer .footer-social-container a:hover svg {
  fill: var(--hovered-state);
}

@media only screen and (min-width: 1024px) {
  .footer {
    padding: 10.625rem 5.125rem 3.25rem;
  }

  .footer .footer__container {
    margin-left: 2.375rem;
  }

  .footer .footer__contact-row {
    display: flex;
    gap: 6.75rem;
  }

  .footer .footer-contact-container {
    columns: 2;
    gap: 5rem;
    width: 41.875rem;
  }

  .footer .footer-links-container {
    display: flex;
    justify-content: space-between;
    margin-block: 0;
    width: 14.625rem;
  }

  .footer .footer-social-container {
    margin-inline: 0;
    width: 7.375rem;
  }

  .footer .footer-social-container a {
    --dim: 2rem;
  }
}

